Banner and Product Section Completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/3f06f2bebd.js" crossorigin="anonymous"></script>
     <!-- Custom Styles -->
     <style>
-        .Bebas_Neue {
+        .Bebas-Neue {
             font-family: 'Bebas Neue', sans-serif;
         }
         .Montserrat {
@@ -26,6 +26,125 @@
     </style>
 </head>
 <body>
+    <header>
+        <section class="flex justify-around items-center bg-[#FFFBF0] py-40"> <!---Banner Section-->
+            <div class="bannet-content"> <!--banner Content-->
+                <h1 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-5"><span class="text-[#FABE4C]">BE The Penguins <br></span>of Winter</h1>
+                <p class="Roboto text-lg font-normal mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, quisquam.</p>
+                <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+            </div>
+            <div class="banner-image"> <!--Banner Image-->
+                <img src="images/model.png" alt="Female model image">
+            </div>
+        </section>
+    </header>
+    <main>
+        <!---Woman Jackets Section-->
+        <section class="max-w-5xl mx-auto mt-20">
+            <h3 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-10">WoMan Jacket</h3>
+            <div class="grid grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
+                <!--Product-1-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-1.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Yellow Coat Jacket </h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--Product-2-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-2.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Ladies Jacket  </h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--Product-3-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-3.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Woman Leather Jacket  </h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!---Man Jackets Section-->
+        <section class="max-w-5xl mx-auto mt-24">
+            <h3 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-10">Man Jacket</h3>
+            <div class="grid grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
+                <!--Product-1-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-4.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Snowboard Jacket Mens</h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--Product-2-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-5.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Man Leather Jackets</h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <!--Product-3-->
+                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                    <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
+                        <img class="w-full" src="images/jacket-6.png" alt="">
+                    </div>
+                    <div class="card-content mt-2.5"> <!---Product Details-->
+                        <h4 class="Roboto text-2xl font-bold text-[#363958]">Man Casual Jackets</h4>
+                        <p class="text-[#3E3E3E] text-base font-normal">Lorem Ipsum is simply dummy text of the </p>
+                        <div class="price-btn flex justify-between items-center mt-5"> <!--Price and button-->
+                            <h6 class="text-4xl font-black text-[#FABE4C]">$234</h6>
+                            <!--Global Button-->
+                            <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+    </main>
+    <footer></footer>
     
 </body>
 </html>
