--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 <body>
     <header>
-        <section class="flex justify-around items-center bg-[#FFFBF0] py-40"> <!---Banner Section-->
+        <section class="flex flex-col md:flex-row justify-around items-center bg-[#FFFBF0] p-2.5 md:py-40"> <!---Banner Section-->
             <div class="bannet-content"> <!--banner Content-->
-                <h1 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-5"><span class="text-[#FABE4C]">BE The Penguins <br></span>of Winter</h1>
+                <h1 class="Bebas-Neue text-5xl md:text-7xl font-normal uppercase text-[#363958] mb-5"><span class="text-[#FABE4C]">BE The Penguins <br></span>of Winter</h1>
                 <p class="Roboto text-lg font-normal mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, quisquam.</p>
                 <button class="bg-[#85A019] font-medium text-base text-white p-4 rounded-lg "><i class="fas fa-shopping-cart"></i> &nbsp; BUY NOW</button>
             </div>
@@ -40,11 +40,11 @@
     </header>
     <main>
         <!---Woman Jackets Section-->
-        <section class="max-w-5xl mx-auto mt-20">
-            <h3 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-10">WoMan Jacket</h3>
-            <div class="grid grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
+        <section class="max-w-5xl mx-2.5 md:mx-auto mt-20">
+            <h3 class="Bebas-Neue text-4xl md:text-7xl font-normal text-center md:text-left uppercase text-[#363958] mb-10">WoMan Jacket</h3>
+            <div class="grid grid-cols-1 md:grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
                 <!--Product-1-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-1.png" alt="">
                     </div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <!--Product-2-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-2.png" alt="">
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <!--Product-3-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-3.png" alt="">
                     </div>
@@ -92,11 +92,11 @@
         </section>
 
         <!---Man Jackets Section-->
-        <section class="max-w-5xl mx-auto mt-24">
-            <h3 class="Bebas-Neue text-7xl font-normal uppercase text-[#363958] mb-10">Man Jacket</h3>
-            <div class="grid grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
+        <section class="max-w-5xl mx-2.5 md:mx-auto mt-20">
+            <h3 class="Bebas-Neue text-4xl md:text-7xl font-normal text-center md:text-left uppercase text-[#363958] mb-10">Man Jacket</h3>
+            <div class="grid grid-cols-1 md:grid-cols-3 items-center justify-between gap-5">  <!---Product Card-->
                 <!--Product-1-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-4.png" alt="">
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <!--Product-2-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-5.png" alt="">
                     </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <!--Product-3-->
-                <div class="card bg-white rounded-lg p-2.5 shadow-lg rounded-xl"> <!---Product Card-->
+                <div class="card bg-white rounded-lg p-2.5 drop-shadow-lg rounded-xl"> <!---Product Card-->
                     <div class="card-img bg-[#F1F1F1] p-5 rounded-xl"> <!--Card image-->
                         <img class="w-full" src="images/jacket-6.png" alt="">
                     </div>
